...
            </RelativeLayout>




    <android.support.design.widget.FloatingActionButton
        android:id="@+id/FavButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:src="@drawable/ic_stars_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_neighbours_details"
        app:layout_constraintEnd_toEndOf="@+id/relative_layout"
...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="7dp"
...
